# sokoban

./: .gitignore  CMakeLists.txt  README.md  chest.h  colors.h  consts.h  draw.cpp  draw.h  game.cpp  game.h  graphics.h  main.cpp  player.h
include/: board.h  chest.h  colors.h  consts.h  draw.h  game.h  graphics.h  player.h
levels/: level.txt  level1.txt  level2.txt  lvl1.txt
src/: draw.cpp  game.cpp  main.cpp
